Fixed some grade input spacing weirdness
Former-commit-id: f752b5e94966584eb4a9ed60a15784907407e84a

--- a/CourseSketchProjects/coursesketchwebclient/src/main/src/instructor/gradebook/instructorGradebook.css
+++ b/CourseSketchProjects/coursesketchwebclient/src/main/src/instructor/gradebook/instructorGradebook.css
@@ -78,6 +78,11 @@ input {
 .gradeSelected {
     padding-top:2px;
 }
+
+.gradeForm {
+    margin: 0px;
+}
+
 /*
 th {
     border-color: black;
